[package]
name = "doh-host"
version = "0.1.0"
authors = ["Christoforos Aslanov <christoforos@christoforos.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "*"
serde_json = "*"
serde_derive = "*"